# pointed

./: .travis.yml  CHANGELOG.markdown  README.markdown  pointed.cabal
.github/workflows/: haskell-ci.yml
Data/: Copointed.hs  Pointed.hs
src/Data/: Copointed.hs  Pointed.hs
src/Data/Copointed/: Generic.hs
src/Data/Pointed/: Generic.hs
