name:          pointed
category:      Data
version:       3.0
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/pointed/
bug-reports:   http://github.com/ekmett/pointed/issues
copyright:     Copyright (C) 2008-2011 Edward A. Kmett
synopsis:      Haskell 98 pointed and copointed data
description:   Haskell 98 pointed and copointed data
build-type:    Simple
extra-source-files: .travis.yml

source-repository head
  type: git
  location: git://github.com/ekmett/pointed.git

library
  build-depends:
    base                 >= 4       && < 5,
    transformers         >= 0.2     && < 0.4,
    containers           >= 0.4     && < 0.6,
    comonad              >= 3.0     && < 3.1,
    comonad-transformers >= 3.0     && < 3.1,
    data-default         >= 0.4     && < 0.5,
    semigroups           >= 0.8.3.1 && < 0.9,
    semigroupoids        >= 3.0     && < 3.1,
    stm                  >= 2.1.2.1 && < 2.4

  exposed-modules:
    Data.Pointed
    Data.Copointed

  ghc-options: -Wall
