name:          pointed
category:      Data
version:       4.2
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/pointed/
bug-reports:   http://github.com/ekmett/pointed/issues
copyright:     Copyright (C) 2008-2013 Edward A. Kmett
synopsis:      Pointed and copointed data
description:   Pointed and copointed data
build-type:    Simple
extra-source-files: .travis.yml

source-repository head
  type: git
  location: git://github.com/ekmett/pointed.git

library
  build-depends:
    base                 >= 4       && < 5,
    transformers         >= 0.2     && < 0.5,
    transformers-compat  >= 0.3     && < 1,
    containers           >= 0.4     && < 0.6,
    comonad              >= 4       && < 5,
    data-default-class   >= 0.0.1   && < 0.1,
    kan-extensions       >= 4.2     && < 5,
    semigroups           >= 0.8.3.1 && < 1,
    semigroupoids        >= 4       && < 5,
    stm                  >= 2.1.2.1 && < 2.5,
    tagged               >= 0.5     && < 1

  exposed-modules:
    Data.Pointed
    Data.Copointed

  ghc-options: -Wall
  hs-source-dirs: src
